--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ transformers==4.26.1
 ftfy==6.1.1
 Pillow==9.2.0
 diffusers==0.14.0
-git+https://github.com/cloneofsimo/lora.git@799c17aef2a475641fb70d68a6992de4fc325ce4
-xformers
+git+https://github.com/cloneofsimo/lora.git
+xformers==0.0.16
 clip-interrogator==0.5.4
 matplotlib
+gradio
